fixed weird wrapping in mobile environment

--- a/screen/profile/user/archive/archive.css
+++ b/screen/profile/user/archive/archive.css
@@ -47,7 +47,6 @@ body {
 #feedcontainer{
     padding-top:175px;
     width:100%;
-    height:2000px;
 }\
 
 .dummy{
@@ -67,17 +66,35 @@ body {
   margin-top: 64px;
 }
 
+.container{
+  max-width: 1080px;
+}
+
 .userfeed{
   width: auto;
-  background-color: #d7d8dc;
   padding-bottom: 300px;
 }
 
 .feedImg{
-  width: 350px;
-  height: 350px;
-  padding: 4px;
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  padding: 5%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   object-fit: cover;
+}
+
+.col-sm{
+  display: block;
+
+  height: auto;
+  position: relative;
+  overflow: hidden;
+  padding: 34.37% 0 0 0;
 }
 
 #footer {
