--- a/screen/profile/user/userprofile.css
+++ b/screen/profile/user/userprofile.css
@@ -50,7 +50,6 @@ body {
 #feedcontainer{
     padding-top:155px;
     width:100%;
-    height:2000px;
 }\
 
 .dummy{
@@ -106,20 +105,35 @@ body {
   font-size: 24px;
 }
 
+.container{
+  max-width: 1080px;
+}
+
 .userfeed{
   width: auto;
   padding-bottom: 300px;
 }
 
 .feedImg{
-  width: 350px;
-  height: 350px;
-  padding: 4px;
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  padding: 5%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   object-fit: cover;
 }
 
-.col-sm-4{
-  text-align: center;
+.col-sm{
+  display: block;
+
+  height: auto;
+  position: relative;
+  overflow: hidden;
+  padding: 34.37% 0 0 0;
 }
 
 #footer {
